
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ ssize_t ;


 int BUFSIZE ;
 unsigned long MAPS_CHECK ;
 int SEEK_SET ;
 int STDOUT_FILENO ;
 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 scalar_t__ lseek (int,int ,int ) ;
 int maps_check (char*) ;
 scalar_t__ read (int,char*,int) ;
 int stderr ;
 scalar_t__ write (int ,char*,scalar_t__) ;

void read_maps(int fd, char *path, unsigned long flag)
{
 ssize_t nbytes;
        char buf[BUFSIZE];

 if (lseek(fd, 0, SEEK_SET) < 0) {
  fprintf(stderr, "Unable to lseek %s\n", path);
  return;
 }

 while ( (nbytes = read(fd, buf, BUFSIZE)) > 0) {

  if (flag & MAPS_CHECK)
   maps_check(buf);

  if (write(STDOUT_FILENO, buf, nbytes) != nbytes) {
   fprintf(stderr, "Unable to read %s\n", path);
   exit (1);
  }
 }
}
