; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_142.c_read_maps.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_142.c_read_maps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFSIZE = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"Unable to lseek %s\0A\00", align 1
@MAPS_CHECK = common dso_local global i64 0, align 8
@STDOUT_FILENO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"Unable to read %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @read_maps(i32 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %11 = load i32, i32* @BUFSIZE, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %8, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %9, align 8
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @SEEK_SET, align 4
  %17 = call i64 @lseek(i32 %15, i32 0, i32 %16)
  %18 = icmp slt i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %3
  %20 = load i32, i32* @stderr, align 4
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @fprintf(i32 %20, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %21)
  store i32 1, i32* %10, align 4
  br label %49

23:                                               ; preds = %3
  br label %24

24:                                               ; preds = %47, %23
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* @BUFSIZE, align 4
  %27 = call i64 @read(i32 %25, i8* %14, i32 %26)
  store i64 %27, i64* %7, align 8
  %28 = icmp sgt i64 %27, 0
  br i1 %28, label %29, label %48

29:                                               ; preds = %24
  %30 = load i64, i64* %6, align 8
  %31 = load i64, i64* @MAPS_CHECK, align 8
  %32 = and i64 %30, %31
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %29
  %35 = call i32 @maps_check(i8* %14)
  br label %36

36:                                               ; preds = %34, %29
  %37 = load i32, i32* @STDOUT_FILENO, align 4
  %38 = load i64, i64* %7, align 8
  %39 = call i64 @write(i32 %37, i8* %14, i64 %38)
  %40 = load i64, i64* %7, align 8
  %41 = icmp ne i64 %39, %40
  br i1 %41, label %42, label %47

42:                                               ; preds = %36
  %43 = load i32, i32* @stderr, align 4
  %44 = load i8*, i8** %5, align 8
  %45 = call i32 @fprintf(i32 %43, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* %44)
  %46 = call i32 @exit(i32 1) #4
  unreachable

47:                                               ; preds = %36
  br label %24

48:                                               ; preds = %24
  store i32 0, i32* %10, align 4
  br label %49

49:                                               ; preds = %48, %19
  %50 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %50)
  %51 = load i32, i32* %10, align 4
  switch i32 %51, label %53 [
    i32 0, label %52
    i32 1, label %52
  ]

52:                                               ; preds = %49, %49
  ret void

53:                                               ; preds = %49
  unreachable
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @lseek(i32, i32, i32) #2

declare dso_local i32 @fprintf(i32, i8*, i8*) #2

declare dso_local i64 @read(i32, i8*, i32) #2

declare dso_local i32 @maps_check(i8*) #2

declare dso_local i64 @write(i32, i8*, i64) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
